# ChessProject

./: CMakeLists.txt  Q1.c  Q1.h  Q2-Daniel-Khait.c  Q2.c  Q2.h  Q3.c  Q3.h  Q4.c  Q4.h  Q5.c  Q5.h  Q6-DESKTOP-U6LDK5B.c  Q6.c  Q6.h  README.txt  common.c  common.h  finalProject.sln  finalProject.vcxproj  finalProject.vcxproj.filters  main-DESKTOP-U6LDK5B.c  main.c  main.h  path
